# FABRIK-for-Robot

./: LICENSE  README.md
a_fabrik/a_fabrik/: CMakeLists.txt  package.xml
a_fabrik/a_fabrik/src/: RMSE.cpp  main.cpp
a_fabrik/a_rviz/: CMakeLists.txt  package.xml
a_fabrik/a_rviz/launch/: view_model.launch
a_fabrik/a_rviz/rviz/: model.rviz
a_fabrik/a_rviz/urdf/: DH_to_URDF.py  model.urdf  model.urdf.xacro
my_fabrik/: algorithm_2_3.py  my_fabrik_2D.py  my_fabrik_3D.py  my_fabrik_all_2D _class.py  my_fabrik_all_2D.py  my_fabrik_all_2D_area.py  my_fabrik_all_2D_area_nocons.py
