<?xml version="1.0"?>
<package>
  <name>a_rviz</name>
  <version>1.0.0</version>
  <description>Visualization configuration for Franka</description>

  <author email="kim87@khu.ac.kr">Sanghyun Kim</author>
  <maintainer email="kim87@khu.ac.kr">Sanghyun Kim</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rviz_imu_plugin</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_console</run_depend>
  <run_depend>rqt_robot_monitor</run_depend>

</package>
